# kr-stock-scanner

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/plans/: 2026-02-19-52w-high-scanner-design.md  2026-02-19-52w-high-scanner-implementation.md
src/: ai_analyst.py  cli.py  collector.py  config.py  db.py  models.py  news_fetcher.py  reporter.py  scanner.py
tests/: test_ai_analyst.py  test_cli.py  test_collector.py  test_config.py  test_db.py  test_integration.py  test_models.py  test_news_fetcher.py  test_reporter.py  test_scanner.py
